fix(ui): keep chevron always visible in organisation select dropdown (#3071)
* fix(ui): keep chevron always visible in organisation select dropdown
* better implem
* better padding

--- a/app/javascript/stylesheets/components/_dropdown.scss
+++ b/app/javascript/stylesheets/components/_dropdown.scss
@@ -47,6 +47,22 @@
   box-shadow: none !important;
 }
 
+.text-truncate-with-chevron {
+  position: relative !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-right: 35px !important;
+
+  &::after {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-right: 1.75rem;
+  }
+}
+
 #batch-actions-menu {
   width: 260px;
 }
